# rclient

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildshaders.bat  buildshaders.sh  vcpkg.json
App/: CMakeLists.txt
Base/: CMakeLists.txt  cpucount.cpp
CSG/: CMakeLists.txt  CSGKernel.cpp
ClientBase/: ReflectionMetadata.cpp  RenderSettingsItem.cpp  RenderSettingsItem.h
ClientShared/: CMakeLists.txt  RobloxServicesTools.cpp  SDLGameController.h  SharedLauncher.h  StealthCodeArea.h  StringConv.cpp  StringConv.h  VMProtectSDK.h  VirtualizerSDK.h  format_string.cpp  format_string.h
Log/: FastLog.cpp  FastLogStream.cpp
Network/: API.cpp  CMakeLists.txt  Client.cpp  Client.h  ClientReplicator.cpp  ClientReplicator.h  ConcurrentRakPeer.h  CrashReporter.cpp  Dictionary.h  DirectPhysicsReceiver.cpp  ErrorCompPhysicsSender.cpp  ErrorCompPhysicsSender.h  ErrorCompPhysicsSender2.h  GameConfigurer.cpp  GamePerfMonitor.cpp  GuidRegistryService.h  InterpolatingPhysicsReceiver.h  Marker.h  NetPmc.cpp  NetworkClusterPacketCache.cpp  NetworkOwnerJob.cpp  NetworkSettings.cpp  NetworkSettings.h  PacketIds.h  Peer.cpp  Peer.h  PersistentDataStore.h  PhysicsReceiver.cpp  Player.cpp  Players.cpp  Replicator.ChangePropertyItem.cpp  Replicator.DeleteInstanceItem.cpp  Replicator.EventInvocationItem.cpp  Replicator.HashItem.cpp  Replicator.HashItem.h  Replicator.NewInstanceItem.cpp  (+22 more)
QTitanRibbon/: CMakeLists.txt
QTitanRibbon/src/base/: QtitanDef.h
QTitanRibbon/src/ribbon/: QtnOfficeFrameHelper.h  QtnOfficeFrameHelper_win.cpp  QtnOfficeFrameHelper_win.h  QtnOfficePopupColorButton.cpp  QtnOfficePopupColorButton.h  QtnOfficePopupMenu.cpp  QtnOfficePopupMenu.h  QtnOfficePopupWindow.cpp  QtnOfficePopupWindow.h  QtnRibbonBackstageView.cpp  QtnRibbonBackstageView.h  QtnRibbonBar.cpp  QtnRibbonBar.h  QtnRibbonBarPrivate.h  QtnRibbonButton.cpp  QtnRibbonButton.h  QtnRibbonGallery.cpp  QtnRibbonGallery.h  QtnRibbonGroup.cpp  QtnRibbonGroup.h  QtnRibbonGroupLayout.h  QtnRibbonMainWindow.cpp  QtnRibbonMainWindow.h  QtnRibbonPage.cpp  QtnRibbonPage.h  QtnRibbonPrivate.cpp  QtnRibbonPrivate.h  QtnRibbonQuickAccessBar.cpp  QtnRibbonQuickAccessBar.h  QtnRibbonSliderPane.cpp  QtnRibbonSliderPane.h  QtnRibbonStatusBar.cpp  QtnRibbonStatusBar.h  QtnRibbonSystemPopupBar.cpp  QtnRibbonSystemPopupBar.h  QtnRibbonTabBar.cpp  QtnRibbonTabBar.h  QtnRibbonToolTip.cpp  QtnRibbonToolTip.h
QTitanRibbon/src/shared/ribbon/: qtnribbon.vcxproj
QTitanRibbon/src/styles/: QtnCommonStyle.cpp  QtnCommonStyle.h  QtnCommonStylePrivate.h  QtnCommonStyle_win.cpp  QtnOfficePaintManager.cpp  QtnOfficeStyle.cpp  QtnOfficeStyle.h  QtnPopupHelpers.cpp  QtnPopupHelpers.h  QtnRibbonPaintManager.cpp  QtnRibbonStyle.cpp  QtnRibbonStyle.h  QtnRibbonStylePrivate.h  QtnStyleHelpers.cpp
RCCService/: CMakeLists.txt  OperationalSecurity.cpp  RCCService.cpp  RCCServiceSoapServiceImpl.cpp  ThumbnailGenerator.cpp  thumbnailgenerator.h
RCCService/gSOAP/: output.config  stdsoap2.cpp  stdsoap2.h
Rendering/GfxCore/: CMakeLists.txt  DeviceCreate.cpp
Rendering/GfxCore/D3D11/: OculusVRD3D11.cpp
Rendering/GfxCore/GL/: ContextGL.h  ContextGLAndroid.cpp  ContextGLHeadless.cpp  ContextGLQt.cpp  ContextGLSDL.cpp  ContextGLWin32.cpp  DeviceContextGL.cpp  DeviceGL.cpp  DeviceGL.h  FramebufferGL.cpp  FramebufferGL.h  GeometryGL.cpp  HeadersGL.h  ShaderGL.cpp  TextureGL.cpp
Rendering/GfxCore/GfxCore.xcodeproj/: project.pbxproj
Rendering/GfxCore/glew/: glew.cpp
Rendering/GfxCore/include/GL/: glew.h
Rendering/GfxCore/include/GfxCore/: Device.h
Rendering/GfxRender/: CMakeLists.txt  FastCluster.cpp  GeometryGenerator.cpp  Image.cpp  LightGrid.cpp  MegaCluster.h  RenderView.cpp  RenderView.h  SceneUpdater.h  ShaderManager.cpp  SmoothCluster.h  TextureManager.cpp  TypesetterBitmap.cpp  TypesetterDynamic.cpp  VisualEngine.cpp
Rendering/GfxRender/GfxRender.xcodeproj/: project.pbxproj
Rendering/ShaderCompiler/: CMakeLists.txt  main.cpp
Rendering/ShaderCompiler/glsl-optimizer/: CMakeLists.txt
Rendering/ShaderCompiler/glsl-optimizer/src/glsl/: builtin_types.cpp  glsl_lexer.cpp  glsl_lexer.ll  glsl_parser.cpp  glsl_parser.h  glsl_parser_extras.cpp  glsl_types.h  ir.h  ir_variable_refcount.cpp  link_uniform_block_active_visitor.h  link_uniform_blocks.cpp  loop_analysis.cpp  opt_dead_code.cpp  standalone_scaffolding.cpp
Rendering/ShaderCompiler/glsl-optimizer/src/glsl/glcpp/: glcpp-lex.c  glcpp.h
Rendering/ShaderCompiler/glsl-optimizer/src/mesa/main/: compiler.h
Rendering/ShaderCompiler/hlsl2glslfork/: CMakeLists.txt
Rendering/ShaderCompiler/hlsl2glslfork/hlslang/MachineIndependent/: Intermediate.cpp  hlslang_tab.hpp  hlslang_tab.output
Rendering/ShaderCompiler/mojoshader/: CMakeLists.txt  mojoshader_assembler.c  mojoshader_compiler.c  mojoshader_preprocessor.c
Rendering/ShaderCompiler/mojoshader/GL/: glext.h
RobloxStudio/: AddEmulationDeviceDialog.cpp  AppSettings.xml  AuthenticationHelper.cpp  AuthoringSettings.cpp  CMakeLists.txt  CSGOperations.cpp  CSGOperations.h  CloudEditAdornable.h  CommonInsertWidget.cpp  CommonInsertWidget.h  DebuggerClient.cpp  DebuggerClient.h  DebuggerWidgets.cpp  DebuggerWidgets.h  DocTabManager.cpp  FindDialog.cpp  GalleryItemColor.cpp  Info.plist  InsertObjectListWidget.cpp  InsertObjectListWidget.h  InsertObjectListWidgetItem.cpp  InsertObjectListWidgetItem.h  KeepSavedChangesDialog.cpp  LogProvider.cpp  LuaSourceBuffer.cpp  ManageEmulationDeviceDialog.cpp  MobileDevelopmentDeployer.cpp  PlayersDataManager.cpp  PlayersDataManager.h  PropertyItems.cpp  QtBuildRules.props  QtUtilities.cpp  QtUtilities.h  RBXMainWindow.ui  RbxWorkspace.cpp  Roblox Studio 2013 dialog.ui  Roblox.cpp  RobloxApplicationManager.cpp  RobloxApplicationManager.h  RobloxBrowser.cpp  (+74 more)
RobloxStudio/filewatcher/: FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherOSX.cpp  FileWatcherWin32.cpp
UniversalClient/: Application.cpp  Application.h  CMakeLists.txt  FunctionMarshaller.cpp  FunctionMarshaller.h  RenderJob.cpp  UserInput.cpp  UserInput.h  UserInputUtil.cpp  UserInputUtil.h  View.cpp  View.h  main.cpp
(+796 files in other folders)
