include(Rendering)

include_project_files(GfxCore "*")

include_directories(include)
include_directories(C:/Users/murdle/Desktop/glew-2.1.0/include)
include_directories(../../ClientShared)

if(ANDROID)
  list(APPEND SOURCES GL/ContextGLAndroid.cpp)
elseif(RCC_BUILD OR ENABLE_PROFILER)
  list(APPEND SOURCES GL/ContextGLHeadless.cpp)
elseif(APPLE)
  list(APPEND SOURCES GL/ContextGLEAGL.mm)
  list(APPEND SOURCES GL/ContextGLNSGL.mm)
else()
  if(STUDIO_BUILD)
    list(APPEND SOURCES GL/ContextGLQt.cpp)
  else()
    list(APPEND SOURCES GL/ContextGLSDL.cpp)
  endif()
endif(ANDROID)

list(APPEND HEADERS GL/ContextGL.h)
list(APPEND HEADERS GL/DeviceGL.h)
list(APPEND HEADERS GL/FramebufferGL.h)
list(APPEND HEADERS GL/GeometryGL.h)
list(APPEND HEADERS GL/HeadersGL.h)
list(APPEND HEADERS GL/ShaderGL.h)
list(APPEND HEADERS GL/TextureGL.h)
list(APPEND HEADERS include/GfxCore/Device.h)
list(APPEND HEADERS include/GfxCore/Framebuffer.h)
list(APPEND HEADERS include/GfxCore/Geometry.h)
list(APPEND HEADERS include/GfxCore/Resource.h)
list(APPEND HEADERS include/GfxCore/Shader.h)
list(APPEND HEADERS include/GfxCore/States.h)
list(APPEND HEADERS include/GfxCore/Texture.h)
list(APPEND HEADERS include/GfxCore/pix.h)

list(APPEND SOURCES Device.cpp)
list(APPEND SOURCES DeviceCreate.cpp)
list(APPEND SOURCES Framebuffer.cpp)
list(APPEND SOURCES GL/CardboardVRGL.cpp)
list(APPEND SOURCES GL/DeviceContextGL.cpp)
list(APPEND SOURCES GL/DeviceGL.cpp)
list(APPEND SOURCES GL/FramebufferGL.cpp)
list(APPEND SOURCES GL/GeometryGL.cpp)
list(APPEND SOURCES GL/ShaderGL.cpp)
list(APPEND SOURCES GL/TextureGL.cpp)
list(APPEND SOURCES Geometry.cpp)
list(APPEND SOURCES Resource.cpp)
list(APPEND SOURCES Shader.cpp)
list(APPEND SOURCES States.cpp)
list(APPEND SOURCES Texture.cpp)
list(APPEND SOURCES pix.cpp)

if(NOT EMSCRIPTEN AND NOT ANDROID)
  list(APPEND SOURCES glew/glew.cpp)
endif(NOT EMSCRIPTEN AND NOT ANDROID)

add_library(GfxCore OBJECT ${SOURCES} ${HEADERS})

if(STUDIO_BUILD)
  target_link_libraries(GfxCore PRIVATE Qt6::OpenGLWidgets Qt6::OpenGL)
endif()

if(ENABLE_PROFILER)
  if(UNIX AND NOT ANDROID)
    target_link_libraries(GfxCore PRIVATE OpenGL::EGL)
  endif()
endif()
